--- a/package.json
+++ b/package.json
@@ -1,11 +1,18 @@
 {
-  "name": "jordan",
+  "name": "astro",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "astro build",
+    "start": "astro dev",
+    "deploy": "astro deploy"
   },
+
+  "dependencies": {
+    "astro": "^1.0.0"
+  }
+  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jccpalmer/docs.git"
