--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "astro build",
+    "start": "astro dev",
+    "deploy": "astro deploy"
   },
+  "dependencies": {
+    "astro": "^1.0.0."
+  }
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jccpalmer/docs.git"
